updated new files

--- a/influxdb+grafana+telegram.html
+++ b/influxdb+grafana+telegram.html
@@ -90,7 +90,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <h3 style="margin-left: 5%;">SOFTWARE/TOOLS NEEDED</h3>
       <p style="margin-left: 5%; margin-right: 5%; text-align: justify;">As the main object on this tutorial, we need to install InfluxDB, Grafana, and Telegram before continue the next steps. If you have not installed the software required, I recommend you to follow these tutorials below!</p>
       <div style="margin-left: 5%; margin-right: 5%; text-align: justify;">
-        <a href="#">InfluxDB</a> |
+        <a href="https://robertomarkus.github.io/tutorials/influxdb-installation.html" target="_blank">InfluxDB</a> |
         <a href="#">Grafana</a> |
         <a href="#">Telegram</a>
       </div><br>
