--- a/influxdb+grafana+telegram.html
+++ b/influxdb+grafana+telegram.html
@@ -92,7 +92,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <div style="margin-left: 5%; margin-right: 5%; text-align: justify;">
         <a href="https://robertomarkus.github.io/tutorials/influxdb-installation.html" target="_blank">InfluxDB</a> |
         <a href="https://robertomarkus.github.io/tutorials/grafana-installation.html" target="_blank">Grafana</a> |
-        <a href="#">Telegram</a>
+        <a href="https://robertomarkus.github.io/tutorials/telegram-installation.html" target="_blank">Telegram</a>
       </div><br>
       <p style="margin-left: 5%; margin-right: 5%; text-align: justify;">First, we go with InfluxDB. We need to run the "influxd" using shell or command prompt and check the databases inside</p>
       </div>
