updated new files

--- a/influxdb+grafana+telegram.html
+++ b/influxdb+grafana+telegram.html
@@ -93,8 +93,15 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <a href="https://robertomarkus.github.io/tutorials/influxdb-installation.html" target="_blank">InfluxDB</a> |
         <a href="https://robertomarkus.github.io/tutorials/grafana-installation.html" target="_blank">Grafana</a> |
         <a href="https://robertomarkus.github.io/tutorials/telegram-installation.html" target="_blank">Telegram</a>
-      </div><br>
+      </div>
+      <br>      
       <p style="margin-left: 5%; margin-right: 5%; text-align: justify;">First, we go with InfluxDB. We need to run the "influxd" using shell or command prompt and check the databases inside</p>
+      <div style="margin-left: 5%; margin-right: 5%; ">
+      <img src="img/content/influxdb/12.jpg"><br><br>
+      <p>You can follow UPPERCASE command above to get the data inside </p>
+      <img src="img/content/influxdb/13.jpg">
+      </div>
+      </div>
       </div>
         </div>
         </section>
