updated new files

--- a/influxdb+grafana+telegram.html
+++ b/influxdb+grafana+telegram.html
@@ -99,7 +99,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <div style="margin-left: 5%; margin-right: 5%; ">
       <img src="img/content/influxdb/12.jpg"><br><br>
       <p>You can follow UPPERCASE command above to get the data inside </p>
-      <img src="img/content/influxdb/13.jpg">
+      <img src="img/content/influxdb/13.jpg"><br><br>
+      When we have the data inside influxDB so we can continue to Grafana Dashboard, just open it by typing your localhost with the port <i>(default grafana port is : 3000)</i> After the grafana opened, add a new panel by click the <b>+</b> button in the left menu and make a new one<br><br>
+      <img src="img/content/grafana/2.jpg"><br><br>
+      <ul>
+      <li>Set the query by changing the <b>"select measurements"</b> KEY (Where the data come from)</li>
+      <li>Set the SELECT by changing the <b>"field(value)"</b>KEYS (What data you want to visualize) and <b>mean()</b> with <b>max()</b></li>
+      <i></i>
+      </ul>
+      <img src="img/content/grafana/3.jpg"><br><br>
+     
+
       </div>
       </div>
       </div>
